--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <title>Digits with React</title>
   <meta name="description" content="Digits with React">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <style> #content { text-align: center; } </style>
+  <link href="http://fonts.googleapis.com/css?family=Oxygen:400,700" rel="stylesheet" type="text/css">
+  <style>
+  	body { font-family: "Oxygen", sans-serif; }
+  	#content { text-align: center; }
+  </style>
 </head>
 <body>
   <div id="content"></div>
